--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,16 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:recommended"
-  ]
+  "extends": ["config:base"],
+  "labels": ["dependencies"],
+  "assignees": [],
+  "packageRules": [
+    {
+      "groupName": "react monorepo",
+      "matchPackageNames": ["@types/react", "@types/react-dom"]
+    }
+  ],
+  "autoApprove": true,
+  "automerge": true,
+  "automergeStrategy": "squash",
+  "ignoreTests": true
 }
